# Detection-of-abandoned-objects

./: Abandoned_detection.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Static_region.cpp  cmake_install.cmake  main.cpp
